--- a/app/views/accounts/registrations/new.html.erb
+++ b/app/views/accounts/registrations/new.html.erb
@@ -117,14 +117,14 @@
                 <%#= f.submit "Register" %>
                 <input type="submit" id="register-btn" value="Register"/>
 
+                <p class="mb8 text-center">
+                  By signing up, you agree to our
+                  <a href="#">Terms Of Use</a>
+                </p>
                 <hr />
                 <%= render "accounts/shared/links" %>
               <% end %>
             <% end %>
-
-            <p class="mb0">By signing up, you agree to our
-              <a href="#">Terms Of Use</a>
-            </p>
           </div>
         </div>
       </section>
