--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,9 @@
  *= require ytplayer
  *= require theme-chipotle
 
+ *= require selectize
+ *= require selectize.bootstrap3
+
  *= require_self
  * require_tree .
  */
