removed parallax which was damaging

--- a/app/assets/javascripts/register.js.erb
+++ b/app/assets/javascripts/register.js.erb
@@ -1,4 +1,7 @@
 $(document).ready(function(){
+  /* State Selectize */
+  $('#ambassador_state').selectize();
+
   form = $('form#new_account');
   plan = {id: 'subscription', name: '1 Year of Standard ODH Services', amount: 350000}; // TODO: add ability to select a plan
 
