--- a/app/views/ambassadors/index.html.erb
+++ b/app/views/ambassadors/index.html.erb
@@ -325,7 +325,7 @@
 <%= javascript_include_tag 'ytplayer.min.js', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'countdown.min.js', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'smooth-scroll.min.js', 'data-turbolinks-track' => true %>
-<%= javascript_include_tag 'parallax.js', 'data-turbolinks-track' => true %>
+<%#= javascript_include_tag 'parallax.js', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'scripts.js', 'data-turbolinks-track' => true %>
 
 <%= javascript_include_tag 'jquery.tagsinput/jquery.tagsinput.js', 'data-turbolinks-track' => true %>
