--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -34,7 +34,7 @@
   <%= javascript_include_tag 'ytplayer.min.js', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'countdown.min.js', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'smooth-scroll.min.js', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'parallax.js', 'data-turbolinks-track' => true %>
+  <%#= javascript_include_tag 'parallax.js', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'scripts.js', 'data-turbolinks-track' => true %>
   <%= yield :js_includes %>
 
