--- a/app/views/accounts/registrations/new.html.erb
+++ b/app/views/accounts/registrations/new.html.erb
@@ -3,7 +3,7 @@
   <%= stylesheet_link_tag 'register', 'data-turbolinks-track' => true %>
 
   <style>
-    
+
   </style>
 <% end %>
 
@@ -84,8 +84,7 @@
                 <%= hidden_field_tag 'token' %>
                 <%= hidden_field_tag 'plan_id' %>
 
-                <%#= f.submit "Register" %>
-                <input type="submit" id="register-btn" value="Register" class="mb0 mt32"/>
+                <input type="submit" id="register-btn" value="Register" />
 
                 <p class="text-center">
                   By registering your account, you agree to our
